--- a/_data/pages/blog.yml
+++ b/_data/pages/blog.yml
@@ -1,7 +1,9 @@
 de:
   cta_learn_more: Mehr erfahren
   back_button_text: Zurück zur Übersicht
+  by_author: "von"
 
 en:
   cta_learn_more: Mehr erfahren
   back_button_text: Zurück zur Übersicht
+  by_author: "by"
