--- a/_data/includes/footer.yml
+++ b/_data/includes/footer.yml
@@ -16,5 +16,5 @@ en:
   privacy: Privacy
   partners: Partners
 
-  cookie_consent_text: Diese Website verwendet Cookies. Durch die fortgesetzte Nutzung dieser Website stimmen Sie dem Einsatz von Cookies zu. [Details ansehen](/privacy-policy).
-  cookie_consent_button_label: Akzeptieren
+  cookie_consent_text: This website uses cookies. By continuing to use this site, you consent to the use of cookies. [View details](/en/privacy-policy).
+  cookie_consent_button_label: Accept
