updated partner links

--- a/_data/includes/footer.yml
+++ b/_data/includes/footer.yml
@@ -6,7 +6,7 @@ pages:
 de:
   imprint: Impressum
   privacy: Datenschutz
-  partners: Partnerschaften
+  partners: Partner
 
   cookie_consent_text: Diese Website verwendet Cookies. Durch die fortgesetzte Nutzung dieser Website stimmen Sie dem Einsatz von Cookies zu. [Details ansehen](/privacy-policy.html).
   cookie_consent_button_label: Akzeptieren
