text correction "about"

--- a/_data/pages/about.yml
+++ b/_data/pages/about.yml
@@ -11,13 +11,13 @@ de:
 
   about_image: about-us.jpg
   about_text: "
-  Nutzerzentriertes Arbeiten und Agilität sind für uns nicht nur Schlagworte, sondern konkrete Vorgehensweisen, die von unseren Experten aus den Bereichen User Research, Digital Experience Design, Software Engineering sowie Prozess- und Innovations-Management angewandt werden. Dieser interdisziplinäre Ansatz ermöglicht es uns flexibel die Perspektive zu wechseln, innovative Lösungsansätze zu entwickeln und die Potenziale der Digitalisierung nachhaltig nutzbar zu machen. So schaffen wir echte Mehrwerte.
+  Nutzerzentriertes Arbeiten und Agilität sind für uns nicht nur Schlagworte, sondern konkrete Vorgehensweisen, die von unseren Experten in allen Kompetenzfeldern angewandt werden. Dieser interdisziplinäre Ansatz ermöglicht es uns flexibel die Perspektive zu wechseln, innovative Lösungsansätze zu entwickeln und die Potenziale der Digitalisierung nachhaltig nutzbar zu machen. So schaffen wir echte Mehrwerte.
 
 
   Ein offener und vertrauensvoller Austausch mit unseren Kunden bildet dabei die Grundlage für eine erfolgreiche und effiziente Projektumsetzung. Dazu gehört auch, Wünsche kritisch zu hinterfragen, um das eigentliche Problem zu identifizieren, das einer Lösung bedarf.
 
 
-  Mehr als 400 erfolgreich realisierte Projekte in verschiedensten Branchen bestätigen unseren ganzheitlichen Beratungsansatz und motivieren uns zur kontinuierlichen Weiterentwicklung unserer Methoden und Kompetenzen.
+  Mehrere hundert erfolgreich realisierte Projekte in verschiedensten Branchen bestätigen unseren ganzheitlichen Beratungsansatz und motivieren uns zur kontinuierlichen Weiterentwicklung unserer Methoden und Kompetenzen.
   "
 
   location_title: Warum von uns erzählen, wenn es um Sie geht.<br/>Wir sind an drei Standorten im Einsatz und freuen uns auf Ihren Anruf!
