text correction "services"

--- a/_data/pages/services.yml
+++ b/_data/pages/services.yml
@@ -10,7 +10,7 @@ de:
       color: yellow
     - name: Digital Experience Design
       img: about.jpg
-      text: Wir erfassen die Bedürfnisse und Anforderungen, wir testen die Usability und User Experience. Wir sind der erfahrene Partner für unsere Kunden und begleiten die Konzeption und Entwicklung. Im Anschluss validieren wir die Prototypen und Produkte.
+      text: Wir sind Gestalter der Erfahrbarkeit von digitalen Produkten und Services. Im agilen Design-Prozess erarbeiten wir digitale Produkte und Services, die Menschen wirklich brauchen und optimal benutzen können. Wir arbeiten mit UX Researchern, Beratern und Software-Entwicklern Hand in Hand. Dabei beziehen wir den Kunden eng mit ein und validieren Lösungsansätze mit potenziellen Nutzern.
       color: darkBlue
     - name: Software Engineering
       img: about.jpg
