text correction "partners"

--- a/_data/pages/partners.yml
+++ b/_data/pages/partners.yml
@@ -16,9 +16,9 @@ partners:
     link: https://www.silicon-sanssouci.org/
 
 de:
-  title: Partner
-  content: Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+  title: Wir sind Teil eines starken Netzwerks
+  content: D‑LABS pflegt zahlreiche Partnerschaften in einem regionalen Netzwerk. Von dem stetigen Austausch zu Trends und Innovationen im Bereich der Digitalisierung und dem Wissenstransfer zwischen den Partnern profitieren auch unsere Kunden.
 
 en:
   title: Partners
-  content: Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+  content: D‑LABS pflegt zahlreiche Partnerschaften in einem regionalen Netzwerk. Von dem stetigen Austausch zu Trends und Innovationen im Bereich der Digitalisierung und dem Wissenstransfer zwischen den Partnern profitieren auch unsere Kunden.
