text correction "approach"

--- a/_data/pages/approach.yml
+++ b/_data/pages/approach.yml
@@ -26,7 +26,7 @@ de:
     - title: Umsetzung
       text: Iterative Optimierung des ­Konzeptes bis hin zur Lösung, die den ­Bedürfnissen aller Stakeholder ­gerecht wird
     - title: Enabling & Coaching
-      text: Befähigung und Begleitung aller Stakeholder in Innovations­prozessen und agilen Arbeitsweisen sowie Trainings zu digitalen Lösungen
+      text: Befähigung und Begleitung aller Stakeholder in Innovations­prozessen und agilen Arbeits­weisen sowie Trainings zu digitalen Lösungen
     - title: Business & Innovation
       text: Strategische Beratung bei der Entwicklung digitaler Lösungen sowie in Innovations- und Changeprozessen 
 
